--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>GIFAPP</title>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="../GIFtastic/javascript/gifyApp.js"></script>
+    <link rel="stylesheet" href="../GIFtastic/css/style.css">
 </head>
 <body>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4" ></h1>
+            <p class="lead">GIFTastic</p>
+        </div>
+    </div>
+    <!-- <div class="row"> -->
+        <div id ="gif-buttons">
 
+        </div>
+    <br>    
+    <div class="input-group mb-3 w-50 p-3">
+    <div class="input-group-prepend">
+        <button class="btn btn-outline-secondary" type="button" id="button-addon1">Add GIF</button>
+    </div>
+    <input type="text" class="form-control" placeholder="Add GIF Search option here" aria-label="Example text with button addon" aria-describedby="button-addon1">
+    </div>
+
+    <!-- </div> -->
+    <div id = "gif-div-container">
+        
+    </div>
+    <script src="https://code.jquery.com/jquery.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
